test_dir/logs_backup/gcc/00.2/open_gcc_2016-12-01-17:06:06.txt
--------------------------------------------------------------------------------------------
seed: 31170
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 31170
seed: 31170
seed: 31170
seed: 31170
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21985
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 21985
seed: 21985
seed: 21985
seed: 21985
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 17028
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 17028
seed: 17028
seed: 17028
seed: 17028
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 544
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 544
seed: 544
seed: 544
seed: 544
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 5035
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 5035
seed: 5035
seed: 5035
seed: 5035
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19747
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/local/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 19747
seed: 19747
seed: 19747
seed: 19747
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/local/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19094
blaster.c:16:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 19094
seed: 19094
seed: 19094
seed: 19094
shared.c:11:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16898
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 16898
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 16898
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 16898
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7438
In file included from shared.h:1:0,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/local/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 7438
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 7438
In file included from shared.h:1:0,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/local/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 7438
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14933
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 14933
seed: 14933
seed: 14933
seed: 14933
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24335
In file included from shared.h:1:0,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/local/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 24335
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 24335
In file included from shared.h:1:0,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/local/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 24335
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31659
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 31659
seed: 31659
seed: 31659
seed: 31659
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19612
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 19612
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 19612
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 19612
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 15910
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 15910
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 15910
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 15910
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18305
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 18305
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 18305
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 18305
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 30009
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 30009
seed: 30009
seed: 30009
seed: 30009
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 4622
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 4622
seed: 4622
seed: 4622
seed: 4622
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 2273
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 2273
seed: 2273
seed: 2273
seed: 2273
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6665
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 6665
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 6665
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 6665
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27248
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 27248
seed: 27248
seed: 27248
seed: 27248
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
